Fixed missing comma in regions-zoom-trans json

--- a/map.html
+++ b/map.html
@@ -115,14 +115,15 @@
         // and it would be nice to zoom in on the actual playable area.
         // We would need to add the scale, translateX, translateY values to the regions-to-mapURL.json file.
 
-        const version = '1.0.53';
+        const version = '1.0.54';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
         //const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
         const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/pois/';
         //const CALIBRATION_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/calibration/';
-        const REGIONS_ZOOM_TRANS_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-zoom-trans.json';
+        //const REGIONS_ZOOM_TRANS_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-zoom-trans.json';
+        const REGIONS_ZOOM_TRANS_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-zoom-trans.json'; '
 
         let currentScene = null;
         let currentDifficulty = 'easy';
