--- a/map.html
+++ b/map.html
@@ -115,7 +115,7 @@
         // and it would be nice to zoom in on the actual playable area.
         // We would need to add the scale, translateX, translateY values to the regions-to-mapURL.json file.
 
-        const version = '1.0.57';
+        const version = '1.0.58';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
@@ -382,9 +382,9 @@
         // Update transform
         function updateTransform() {
             svg.style.transform = `translate(${translateX}px, ${translateY}px) scale(${scale})`;
-            document.getElementById('status').textContent =
-                `${version}: ${currentScene} (${currentDifficulty}) translate(${translateX.toFixed(2)}px, ${translateY.toFixed(2)}px) scale(${scale.toFixed(2)})`
-                ;
+            //document.getElementById('status').textContent =
+            //    `${version}: ${currentScene} (${currentDifficulty}) translate(${translateX.toFixed(2)}px, ${translateY.toFixed(2)}px) scale(${scale.toFixed(2)})`;
+            console.log(`${version}: ${currentScene} (${currentDifficulty}) translate(${translateX.toFixed(2)}px, ${translateY.toFixed(2)}px) scale(${scale.toFixed(2)})`);
         }
 
         // Mouse wheel zoom
